@@ -83,122 +83,124 @@ oafinfodir = $(datadir)/oaf
 oafinfo_DATA = $(dia_oafinfo)
 
 dia_core_files = \
-	    exit_dialog.h \
-	    exit_dialog.c \
-	    diagram.c \
-	    diagram.h \
-	    preferences.c \
-	    preferences.h \
-	    load_save.c \
-	    load_save.h \
-	    properties-dialog.c \
-	    properties-dialog.h \
-	    defaults.c \
-	    defaults.h \
-	    undo.c \
-	    undo.h \
-	    object_ops.c \
-	    object_ops.h \
-	    layer_dialog.c \
-	    layer_dialog.h \
-	    commands.c \
-	    commands.h \
-	    app_procs.c \
-	    app_procs.h \
-	    connectionpoint_ops.h \
-	    connectionpoint_ops.c \
-	    disp_callbacks.c \
-	    disp_callbacks.h \
-	    display.c \
-	    display.h \
-	    select.c \
-	    select.h \
-	    color_area.c \
-	    color_area.h \
-	    linewidth_area.c \
-	    linewidth_area.h \
-	    grid.c \
-	    grid.h \
-	    handle_ops.c \
-	    handle_ops.h \
-	    interface.c \
-	    interface.h \
-	    dia-app-icons.h \
-	    modify_tool.c \
-	    modify_tool.h \
-	    scroll_tool.c \
-	    scroll_tool.h \
-	    create_object.c \
-	    create_object.h \
-	    magnify.c \
-	    magnify.h \
-	    menus.c \
-	    menus.h \
-	    cut_n_paste.c \
-	    cut_n_paste.h \
-	    render_gdk.c \
-	    render_gdk.h \
-	    tool.c \
-	    tool.h \
-	    pixmaps.h \
-	    diapagelayout.c \
-	    diapagelayout.h \
-	    pagesetup.c \
-	    pagesetup.h \
-	    filedlg.c \
-	    filedlg.h \
-	    find-and-replace.c \
-	    find-and-replace.h \
-	    plugin-manager.c \
-	    plugin-manager.h \
-	    dia-props.c \
-	    dia-props.h \
-	    gtkwrapbox.h \
-	    gtkwrapbox.c \
-	    gtkhwrapbox.h \
-	    gtkhwrapbox.c \
-	    gtkvwrapbox.h \
-	    gtkvwrapbox.c \
-	    cursor.c \
-	    cursor.h \
-	    splash.c \
-	    dia-app-icons.h \
-	    recent_files.h \
-	    recent_files.c \
-	    diagram_tree.h \
-	    diagram_tree.c \
-	    diagram_tree_window.h \
-	    diagram_tree_window.c \
-	    diagram_tree_menu.h \
-	    diagram_tree_menu.c \
-	    diagram_tree_menu_callbacks.h \
-	    diagram_tree_menu_callbacks.c \
-	    sheets.c \
-	    sheets.h \
-	    sheets_dialog.c \
-	    sheets_dialog.h \
-	    sheets_dialog_callbacks.c \
-	    sheets_dialog_callbacks.h \
-	    autosave.c \
-	    autosave.h \
-	    authors.h \
-	    dynamic_refresh.h \
-	    dynamic_refresh.c \
-	    navigation.h \
-	    navigation.c \
-	    diacanvas.c \
-	    diacanvas.h \
-	    highlight.c \
-	    highlight.h \
-	    textedit.c \
-	    textedit.h \
-	    textedit_tool.c \
-	    textedit_tool.h \
-	    diagrid.h
+	confirm.h \
+	confirm.c \
+	exit_dialog.h \
+	exit_dialog.c \
+	diagram.c \
+	diagram.h \
+	preferences.c \
+	preferences.h \
+	load_save.c \
+	load_save.h \
+	properties-dialog.c \
+	properties-dialog.h \
+	defaults.c \
+	defaults.h \
+	undo.c \
+	undo.h \
+	object_ops.c \
+	object_ops.h \
+	layer_dialog.c \
+	layer_dialog.h \
+	commands.c \
+	commands.h \
+	app_procs.c \
+	app_procs.h \
+	connectionpoint_ops.h \
+	connectionpoint_ops.c \
+	disp_callbacks.c \
+	disp_callbacks.h \
+	display.c \
+	display.h \
+	select.c \
+	select.h \
+	color_area.c \
+	color_area.h \
+	linewidth_area.c \
+	linewidth_area.h \
+	grid.c \
+	grid.h \
+	handle_ops.c \
+	handle_ops.h \
+	interface.c \
+	interface.h \
+	dia-app-icons.h \
+	modify_tool.c \
+	modify_tool.h \
+	scroll_tool.c \
+	scroll_tool.h \
+	create_object.c \
+	create_object.h \
+	magnify.c \
+	magnify.h \
+	menus.c \
+	menus.h \
+	cut_n_paste.c \
+	cut_n_paste.h \
+	render_gdk.c \
+	render_gdk.h \
+	tool.c \
+	tool.h \
+	pixmaps.h \
+	diapagelayout.c \
+	diapagelayout.h \
+	pagesetup.c \
+	pagesetup.h \
+	filedlg.c \
+	filedlg.h \
+	find-and-replace.c \
+	find-and-replace.h \
+	plugin-manager.c \
+	plugin-manager.h \
+	dia-props.c \
+	dia-props.h \
+	gtkwrapbox.h \
+	gtkwrapbox.c \
+	gtkhwrapbox.h \
+	gtkhwrapbox.c \
+	gtkvwrapbox.h \
+	gtkvwrapbox.c \
+	cursor.c \
+	cursor.h \
+	splash.c \
+	dia-app-icons.h \
+	recent_files.h \
+	recent_files.c \
+	diagram_tree.h \
+	diagram_tree.c \
+	diagram_tree_window.h \
+	diagram_tree_window.c \
+	diagram_tree_menu.h \
+	diagram_tree_menu.c \
+	diagram_tree_menu_callbacks.h \
+	diagram_tree_menu_callbacks.c \
+	sheets.c \
+	sheets.h \
+	sheets_dialog.c \
+	sheets_dialog.h \
+	sheets_dialog_callbacks.c \
+	sheets_dialog_callbacks.h \
+	autosave.c \
+	autosave.h \
+	authors.h \
+	dynamic_refresh.h \
+	dynamic_refresh.c \
+	navigation.h \
+	navigation.c \
+	diacanvas.c \
+	diacanvas.h \
+	highlight.c \
+	highlight.h \
+	textedit.c \
+	textedit.h \
+	textedit_tool.c \
+	textedit_tool.h \
+	diagrid.h
 
 dia_SOURCES = \
-	    $(dia_core_files) \
-	    main.c 
+	$(dia_core_files) \
+	main.c 
 
 EFENCE =
 
@@ -210,8 +212,8 @@ dia_LDADD = ../lib/libdia.la \
 ## Especially the configure/make parts.
 
 dia_embedd_SOURCES = \
-	    $(dia_core_files) \
-	    dia_embedd.c
+	$(dia_core_files) \
+	dia_embedd.c
 
 dia_embedd_LDADD = ../lib/libdia.la \
 	$(EFENCE) \
